tests/vertical-slice/accept/match_u8_literal_catchall.hew
// Accept: a literal u8 match with a catch-all arm is exhaustive and lowers.
fn main() -> i64 {
    let x: u8 = 2;
    match x {
        0 => 1,
        1 => 2,
        _ => 0,
    }
}
